<resources>
    <string name="app_name">KNOW YOUR CALLER</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Recording Voice for Registration</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="login_email_hint">Email</string>
    <string name="spam_text">Looks like spam!!</string>
    <string name="login_password_hint">Password</string>
    <string name="governance_phonenumber">Governance phone number</string>
    <string name="governance_email">Governance email address</string>
</resources>
