<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.aravindchowdary.callrecorder.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:textSize="40sp"
                    android:text="Know UR\n Caller"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="2dp"
                    android:src="@drawable/ic_voice_image" />

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="417dp"
                android:layout_height="579dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="389dp"
                    android:layout_height="550dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            android:id="@+id/txthead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/audio_recorder"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            android:id="@+id/btnRecord"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/purple_500"
                            android:textAlignment="center"
                            android:padding="5dp"
                            android:text="@string/start_recording"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            android:id="@+id/btnStop"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/purple_500"
                            android:padding="5dp"
                            android:text="@string/stop_recording"
                            android:textAlignment="center"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            android:id="@+id/btnPlay"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/purple_500"
                            android:textAlignment="center"
                            android:padding="5dp"
                            android:text="@string/play_recording"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            android:id="@+id/btnStopPlay"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:background="@color/purple_500"
                            android:padding="5dp"
                            android:text="@string/stop_playing"
                            android:textColor="@color/white" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/idTVstatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/status"
                        android:textAlignment="center"
                        android:textSize="30sp" />


                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/loginButton"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="60dp"
                            android:text="Register" />

                    <LinearLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>